[gd_scene load_steps=18 format=3 uid="uid://d4n1kp3j8smdl"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_mvwvm"]
[ext_resource type="Texture2D" uid="uid://dlmlqhiu6yxf6" path="res://assets/art/player_fall.png" id="2_outkx"]
[ext_resource type="Texture2D" uid="uid://bb034nwyrsby2" path="res://assets/art/player_walk.png" id="3_2ki34"]
[ext_resource type="Texture2D" uid="uid://cs3n2acm175dr" path="res://assets/art/player_idle.png" id="3_grlim"]
[ext_resource type="AudioStream" uid="uid://ce88tea7vago6" path="res://assets/audio/MI_SFX 44.wav" id="3_xbqkc"]
[ext_resource type="Texture2D" uid="uid://dmbk25hgsnlfv" path="res://assets/art/player_jump.png" id="4_uce6f"]
[ext_resource type="AudioStream" uid="uid://dw58fb5f3i84h" path="res://assets/audio/classic_hurt.mp3" id="7_83mw2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lwnan"]
atlas = ExtResource("3_2ki34")
region = Rect2(0, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfyle"]
atlas = ExtResource("3_2ki34")
region = Rect2(40, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct2ct"]
atlas = ExtResource("3_2ki34")
region = Rect2(80, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kcj2"]
atlas = ExtResource("3_2ki34")
region = Rect2(120, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pollj"]
atlas = ExtResource("3_2ki34")
region = Rect2(160, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_anbcy"]
atlas = ExtResource("3_2ki34")
region = Rect2(200, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeg1e"]
atlas = ExtResource("3_2ki34")
region = Rect2(240, 0, 40, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_es1rl"]
atlas = ExtResource("3_2ki34")
region = Rect2(280, 0, 40, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ntf1i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_outkx")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_grlim")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_uce6f")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwnan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfyle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct2ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kcj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pollj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anbcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeg1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es1rl")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucb8u"]
size = Vector2(54, 101)

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_mvwvm")
JUMP_VELOCITY = -600.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ntf1i")
animation = &"fall"
speed_scale = 1.8
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 21.5)
shape = SubResource("RectangleShape2D_ucb8u")

[node name="TileCollider" type="Node2D" parent="."]
position = Vector2(0, 78)

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xbqkc")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_83mw2")
